# inductionviz-backend

./: .gitignore  Procfile  app.py  attention_head_analysis.ipynb  bigram_model.py  build_bigram_counts.py  gpt2_layers_animation.py  hp.txt  nixpacks.toml  pyproject.toml  test_ablation.py  test_football.py
media/videos/gpt2_layers_animation/1080p60/partial_movie_files/GPT2ReductionScene/: partial_movie_file_list.txt
tests/: test_models.py
