[project]
name = "inductionviz"
version = "1.0.0"
description = "Induction heads visualization tool"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "torch==2.5.1+cpu; platform_system != 'Darwin'",
    "torch>=2.4.0; platform_system == 'Darwin'",
    "transformer-lens",
    "tiktoken",
    "pydantic",
    "psutil",
    "manim",
    "numpy",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]
